vlib/v/parser/tests/redefine_imported_const_err.vv
import time { second } 

const second = 10
